--- a/.github/workflows/catalog.yml
+++ b/.github/workflows/catalog.yml
@@ -35,16 +35,16 @@ concurrency:
 
 jobs:
   build:
-    runs-on: macos-12
+    #runs-on: macos-12
     #runs-on: ubuntu-22.04
-    #runs-on: ubuntu-latest
+    runs-on: ubuntu-latest
 
     timeout-minutes: 30
     steps:
       - name: "Install ${{ env.FAIRTOOL }}"
         run: |
           # https://github.com/actions/runner-images/issues/6283
-          #eval "$(/home/linuxbrew/.linuxbrew/bin/brew shellenv)"
+          eval "$(/home/linuxbrew/.linuxbrew/bin/brew shellenv)"
           #brew --version
           brew install fair-ground/tool/$FAIRTOOL
           $FAIRTOOL version
