--- a/.github/workflows/catalog.yml
+++ b/.github/workflows/catalog.yml
@@ -41,11 +41,12 @@ jobs:
 
     timeout-minutes: 30
     steps:
+      - name: Set up Homebrew
+        id: set-up-homebrew
+        uses: Homebrew/actions/setup-homebrew@master
+
       - name: "Install ${{ env.FAIRTOOL }}"
         run: |
-          # https://github.com/actions/runner-images/issues/6283
-          eval "$(/home/linuxbrew/.linuxbrew/bin/brew shellenv)"
-          #brew --version
           brew install fair-ground/tool/$FAIRTOOL
           $FAIRTOOL version
 
