--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -36,8 +36,9 @@ jobs:
         uses: ruby/setup-ruby@0a29871fe2b0200a17a4497bae54fe5df0d973aa # v1.115.3
         with:
           ruby-version: '3.0'
-          bundler-cache: true
+          bundler-cache: false
           cache-version: 0
+
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v2
