--- a/.github/workflows/catalog.yml
+++ b/.github/workflows/catalog.yml
@@ -15,7 +15,7 @@
 #
 ##############################################################################
 
-name: Publish App Catalogs
+name: Build appfair.net pages and catalogs
 
 env:
   FAIRTOOL: "fairtool"
@@ -33,11 +33,6 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
 jobs:
   build:
     runs-on: ubuntu-22.04
@@ -46,6 +41,13 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+
+      - name: Setup Ruby
+        uses: ruby/setup-ruby@v1.123.0
+        with:
+          ruby-version: '3.0'
+          bundler-cache: false
+          cache-version: 0
 
       - name: Set up Homebrew
         if: false
@@ -210,6 +212,18 @@ jobs:
         # Automatically uploads an artifact from the './_site' directory by default
         uses: actions/upload-pages-artifact@v1
 
+  # Deployment job (which must be in a separate job)
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    permissions:
+      contents: read
+      pages: write
+      id-token: write
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
