--- a/.github/workflows/catalog.yml
+++ b/.github/workflows/catalog.yml
@@ -43,6 +43,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Setup Ruby
+        if: false
         uses: ruby/setup-ruby@v1.123.0
         with:
           ruby-version: '3.0'
@@ -50,12 +51,23 @@ jobs:
           cache-version: 0
 
       - name: Set up Homebrew
-        if: false
         id: set-up-homebrew
         uses: Homebrew/actions/setup-homebrew@master
 
+      - name: Cache Homebrew Bundler RubyGems
+        id: cache
+        uses: actions/cache@v1
+        with:
+          path: ${{ steps.set-up-homebrew.outputs.gems-path }}
+          key: ${{ runner.os }}-rubygems-${{ steps.set-up-homebrew.outputs.gems-hash }}
+          restore-keys: ${{ runner.os }}-rubygems-
+
+      - name: Install Homebrew Bundler RubyGems
+        if: steps.cache.outputs.cache-hit != 'true'
+        run: |
+          brew install-bundler-gems
+
       - name: "Install ${{ env.FAIRTOOL }}"
-        if: false
         run: |
           brew install fair-ground/tool/$FAIRTOOL
           $FAIRTOOL version
