--- a/.github/workflows/catalog.yml
+++ b/.github/workflows/catalog.yml
@@ -67,6 +67,7 @@ jobs:
           brew install-bundler-gems
 
       - name: "Install ${{ env.FAIRTOOL }}"
+        if: false
         run: |
           brew install fair-ground/tool/$FAIRTOOL
           $FAIRTOOL version
@@ -81,6 +82,7 @@ jobs:
           echo "FAIRTOOL_TWITTER_TOKEN_SECRET=${{ secrets.APP_FAIR_TWITTER_TOKEN_SECRET }}" >> $GITHUB_ENV
 
       - name: Generate macOS catalog
+        if: false
         run: |
           cp fairapps-macos.json fairapps-macos_old.json && touch fairapps-macos_old.json || echo "no existing fairapps-macos.json"
           $FAIRTOOL fair catalog \
@@ -103,7 +105,7 @@ jobs:
             -o fairapps-macos.json
 
           # update the catalog to generate the markdown and news items 
-          $FAIRTOOL source postrelease \
+          echo SKIPPING: $FAIRTOOL source postrelease \
             --from-catalog fairapps-macos_old.json \
             --to-catalog fairapps-macos.json \
             --markdown-index fairapps-macos.md \
@@ -121,6 +123,7 @@ jobs:
           mv fairapps-macos_new.json fairapps-macos.json
 
       - name: Generate iOS catalog
+        if: false
         run: |
           cp fairapps-ios.json fairapps-ios_old.json && touch appcasks_old.json || echo "no existing fairapps-ios.json"
           $FAIRTOOL fair catalog \
@@ -146,7 +149,7 @@ jobs:
 
 
           # update the catalog to generate the markdown and news items 
-          $FAIRTOOL source postrelease \
+          echo SKIPPING: $FAIRTOOL source postrelease \
             --from-catalog fairapps-ios_old.json \
             --to-catalog fairapps-ios.json \
             --markdown-index fairapps-ios.md \
@@ -189,7 +192,7 @@ jobs:
             #--topic-name "appfair-cask" \
 
           # update the catalog to generate the markdown and news items 
-          $FAIRTOOL source postrelease \
+          echo SKIPPING: $FAIRTOOL source postrelease \
             --from-catalog appcasks_old.json \
             --to-catalog appcasks.json \
             --markdown-index appcasks.md \
