--- a/.github/workflows/catalog.yml
+++ b/.github/workflows/catalog.yml
@@ -47,7 +47,7 @@ jobs:
         uses: ruby/setup-ruby@v1.123.0
         with:
           ruby-version: '3.0'
-          bundler-cache: true
+          bundler-cache: false
           cache-version: 0
 
       - name: Set up Homebrew
