--- a/.github/workflows/catalog.yml
+++ b/.github/workflows/catalog.yml
@@ -26,7 +26,7 @@ on:
   push:
     branches: [ main ]
   schedule:
-    - cron: '0 * * * *'
+    - cron: '30 0,2,4,6,8,10,12,14,16,18,20,22 * * *'
   workflow_dispatch:
 
 concurrency: 
@@ -37,7 +37,7 @@ concurrency:
 jobs:
   build:
     runs-on: ubuntu-22.04
-    timeout-minutes: 30
+    timeout-minutes: 90
 
     steps:
       - name: Checkout
