--- a/.github/workflows/catalog.yml
+++ b/.github/workflows/catalog.yml
@@ -147,6 +147,7 @@ jobs:
           mv fairapps-ios_new.json fairapps-ios.json || echo "No fairapps-ios_new.json"
 
       - name: Generate appcasks catalog
+        if: false
         run: |
           cp appcasks.json appcasks_old.json && touch appcasks_old.json || echo "no existing appcasks.json"
 
